--- a/autres-projets.html
+++ b/autres-projets.html
@@ -29,130 +29,60 @@
             <li><a href="a-propos.html">À propos</a></li>
         </ul>
     </nav>
-    <div class="logo">
-        <img src="img/dc.png" height="74" width="94">
-    </div>
+    <div class="logo"><img src="img/dc.png" height="74" width="94"></div>
     <div class="fond_header"></div>
-    <div class="titre_projet">
-        <p>Data Code</p>
-    </div>
-    <div class="titre_projet2">
-        <p>Un clic ! c'est tout !</p>
-    </div>
+    <div class="titre_projet"><p>Data Code</p></div>
+    <div class="titre_projet2"><p>Un clic ! c'est tout !</p></div>
 </header>
 
-<div class="txt1">
-    <p>
-        Si cela vous a plus, voici les autres projets de mon groupe:
-    </p>
-</div>
+
+<div class="txt1"><p>Si cela vous a plus, voici les autres projets de mon groupe:</p></div>
+
+<main>
+    <div class="ligne1">
+        <div class="ba1"><a href="https://projets1.sitecali.fr/"><img src="img/autres-projets/her.jpg" width="153" height="204"><p><i>Her</i><br>Cin&Science</p></a></div>
+        <div class="ba2"><a href="http://projets1.taniaandre.fr/"><img src="img/autres-projets/ghost.jpg" width="143" height="204"><p><i>Ghost In Shell</i><br>Hyperconnexion</p></a></div>
+    </div>
+
+    <div class="ligne2">
+        <div class="ba3"><a href="http://projets1.www.alexanthoine.fr"><img src="img/autres-projets/blackmirror.jpg" width="148.3" height="218"><p><i>Balck Mirror</i></p></a></div>
+        <div class="ba4"><a href="http://projets1.site.thibaudbarrand.fr/"><img src="img/autres-projets/htsdo.jpg" width="164" height="218"><p><i>How To Sell </i><br>Drugs Online</p></a></div>
+        <div class="blackmirror2"><a href="http://projets1.www.alexanthoine.fr"><p>Black Data</p></a></div>
+        <div class="htsdo2"><a href="http://projets1.site.thibaudbarrand.fr/"><p>Wattor</p></a></div>
+    </div>
+
+    <div class="ligne3">
+        <div class="ba5"><a href="http://projets1.lenabtlrd.fr/"><img src="img/autres-projets/search.jpg" width="153" height="204"><p><i>Searching: <br>Portée disparue</i>Pollution cachée</p></a></div>
+        <div class="ba6"><a href="http://projets1.nbaumann.fr"><img src="img/autres-projets/south-park.jpg" width="143" height="204"><p><i>South park</i><br>South Park <br>dénonce amazon</p></a></div>
+    </div>
+
+    <div class="ligne4">
+        <div class="ba7"><a href="https://projets1.marinebeurier.fr/"><img src="img/autres-projets/girlboss.jpg" width="152" height="226"><p><i>Girlboss</i><br>Polluting girl</p></a></div>
+        <div class="ba8"><a href="http://projets1.www.raphbonin.fr/"><img src="img/autres-projets/eagle-eye.jpg" width="150.67" height="226"><p><i>L'oeil du mal</i><br>Pollution cachée <br>des data center</p></a></div>
+    </div>
+
+    <div class="ligne5">
+        <div class="ba9"><a href="http://projets1.mathisbotton.fr"><img src="img/autres-projets/bladerunner.jpg" width="153" height="207"><p><i>Blade <br>Runner2049</i><br>Data Runner</p></a></div>
+        <div class="ba10"><a href="http://projets1.evaduxewy.fr/"><img src="img/autres-projets/hackers.jpg" width="153" height="210"><p><i>Hackers</i> <br>Centhack</p></a></div>
+    </div>
+
+    <div class="ligne6">
+        <div class="ba11"><a href="http://projets1.mathisbotton.fr"><img src="img/autres-projets/thesocial.jpg" width="154" height="206"></a><p><i>The social network</i><br></p></div>
+        <div class="the-social2"><a href="http://projets1.nathanbroglin.fr"><p>The shadow of <br>sociability</p></a></div>
+    </div>
+</main>
 
 
-<div class="ba1">
-    <a href="https://projets1.sitecali.fr/"><img src="img/autres-projets/her.jpg" width="153" height="204"></a>
-</div>
-<div class="ba2">
-    <a href="http://projets1.taniaandre.fr/"><img src="img/autres-projets/ghost.jpg" width="143" height="204"></a>
-</div>
-<div class="her">
-    <a href="https://projets1.sitecali.fr/"><p><i>Her</i><br>Cin&Science</p></a>
-</div>
-<div class="ghost">
-    <a href="http://projets1.taniaandre.fr/"><p><i>Ghost In Shell</i><br>Hyperconnexion</p></a>
-</div>
-
-
-<div class="ba3">
-    <a href="http://projets1.www.alexanthoine.fr"><img src="img/autres-projets/blackmirror.jpg" width="148.3" height="218"></a>
-</div>
-<div class="ba4">
-    <a href="http://projets1.site.thibaudbarrand.fr/"><img src="img/autres-projets/htsdo.jpg" width="164" height="218"></a>
-</div>
-<div class="blackmirror">
-    <a href="http://projets1.www.alexanthoine.fr"><p><i>Balck Mirror</i></p></a>
-</div>
-<div class="blackmirror2"><a href="http://projets1.www.alexanthoine.fr"><p>Black Data</p></a></div>
-<div class="htsdo">
-    <a href="http://projets1.site.thibaudbarrand.fr/"><p><i>How To Sell <br>Drugs Online</i></p></a>
-</div>
-<div class="htsdo2"><a href="http://projets1.site.thibaudbarrand.fr/"><p>Wattor</p></a></div>
-
-
-<div class="ba5">
-    <a href="http://projets1.lenabtlrd.fr/"><img src="img/autres-projets/search.jpg" width="153" height="204"></a>
-</div>
-<div class="ba6">
-    <a href="http://projets1.nbaumann.fr"><img src="img/autres-projets/south-park.jpg" width="143" height="204"></a>
-</div>
-<div class="searching">
-    <a href="http://projets1.lenabtlrd.fr/"><p><i>Searching: <br>Portée disparue</i>Pollution cachée</p></a>
-</div>
-<div class="south-park">
-    <a href="http://projets1.nbaumann.fr"><p><i>South park</i><br>South Park <br>dénonce amazon</p></a>
-</div>
-
-
-<div class="ba7">
-    <a href="https://projets1.marinebeurier.fr/"><img src="img/autres-projets/girlboss.jpg" width="152" height="226"></a>
-</div>
-<div class="ba8">
-    <a href="http://projets1.www.raphbonin.fr/"><img src="img/autres-projets/eagle-eye.jpg" width="150.67" height="226"></a>
-</div>
-<div class="girl-boss">
-    <a href="https://projets1.marinebeurier.fr/"><p><i>Girlboss</i><br>Polluting girl</p></a>
-</div>
-<div class="eagle-eye">
-    <a href="http://projets1.www.raphbonin.fr/"><p><i>L'oeil du mal</i><br>Pollution cachée <br>des data center</p></a>
-</div>
-
-
-<div class="ba9">
-    <a href="http://projets1.mathisbotton.fr"><img src="img/autres-projets/bladerunner.jpg" width="153" height="207"></a>
-</div>
-<div class="ba10">
-    <a href="http://projets1.evaduxewy.fr/"><img src="img/autres-projets/hackers.jpg" width="153" height="210"></a>
-</div>
-<div class="bladerunner">
-    <a href="http://projets1.mathisbotton.fr"><p><i>Blade <br>Runner2049</i><br>Data Runner</p></a>
-</div>
-<div class="heackers">
-    <a href="http://projets1.evaduxewy.fr/"><p><i>Hackers</i> <br>Centhack</p></a>
-</div>
-
-
-<div class="ba11">
-    <a href="http://projets1.mathisbotton.fr"><img src="img/autres-projets/thesocial.jpg" width="154" height="206"></a>
-</div>
-<div class="the-social">
-    <a href="http://projets1.nathanbroglin.fr"><p><i>The social network</i><br></p></a>
-</div>
-<div class="the-social2"><a href="http://projets1.nathanbroglin.fr"><p>The shadow of <br>sociability</p></a></div>
-
-
-
-<div class="bouton">
-    <a href="a-propos.html"><img src="img/autres-projets/bouton4.png" height="72" width="296"></a>
-</div>
-<div class="tex-clic-ap1">
-    <a href="a-propos.html"><p>
-        À Propos
-    </p></a>
+<div class="btonton"><a href="a-propos.html"></a>
+    <div class="tex-clic-ap1"><a href="a-propos.html"><p>À Propos</p></a></div>
 </div>
 
 <footer>
     <div class="fond_footer"></div>
-    <div class="nom_prenom">
-        <p>Nina BELLINO A1</p>
-    </div>
-    <div class="mailto">
-        <a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a>
-    </div>
-    <div class="projet">
-        <p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p>
-    </div>
-    <div class="mmi_montbe">
-        <a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a>
-    </div
+    <div class="nom_prenom"><p>Nina BELLINO A1</p></div>
+    <div class="mailto"><a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a></div>
+    <div class="projet"><p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p></div>
+    <div class="mmi_montbe"><a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a></div
 </footer>
 </body>
 </html>
