--- a/article-scientifique.html
+++ b/article-scientifique.html
@@ -29,48 +29,26 @@
             <li><a href="a-propos.html">À propos</a></li>
         </ul>
     </nav>
-    <div class="logo">
-        <img src="img/dc.png" height="74" width="94">
-    </div>
+    <div class="logo"><img src="img/dc.png" height="74" width="94"></div>
     <div class="fond_header"></div>
-    <div class="titre_projet">
-        <p>Data Code</p>
-    </div>
-    <div class="titre_projet2">
-        <p>Un clic ! c'est tout !</p>
-    </div>
+    <div class="titre_projet"><p>Data Code</p></div>
+    <div class="titre_projet2"><p>Un clic ! c'est tout !</p></div>
 </header>
 
-<div class="teletravail">
-    <img src="img/article-scientifique/teletravrail.png" width="375" height="812">
-</div>
-
-<div class="tt1">
-    <p>
-        Les clés pour comprendre l’impact du télétravail
-    </p>
-</div>
-<div class="artcl1">
-    <p>
-        Économie de temps de transport, réduction des émissions de CO 2,
+<div class="parag1">
+    <div class="teletravail"><img src="img/article-scientifique/teletravrail.png" width="375" height="812"></div>
+    <h1 class="tt1">Les clés pour comprendre l’impact du télétravail</h1>
+    <p>Économie de temps de transport, réduction des émissions de CO 2,
         amélioration de la qualité de vie des salariés… En cette période de crise
         sanitaire, le télétravail a le vent en poupe. Pourtant, ce nouveau mode de
         travail présente aussi des inconvénients et affiche de vraies limites.
-        Explications en 5 points.
-    </p>
-</div>
-<div class="table">
-    <img src="img/article-scientifique/table.png" width="375" height="246">
-</div>
-<div class="lg1">
-    <p>
-        Image du télétravail, Google Image
-    </p>
+        Explications en 5 points.</p>
+    <div class="table"><img src="img/article-scientifique/table.png" width="375" height="246"></div>
+    <div class="lg1">Image du télétravail, Google Image</div>
 </div>
 
-<div class="artcl2">
-    <p>
-        Le télétravail a connu un essor inédit en France ces derniers mois.
+<div class="parag2">
+    <p>Le télétravail a connu un essor inédit en France ces derniers mois.
         L’épidémie de Covid-19 a en effet poussé plus de 40% de la population
         active à travailler à distance pendant le confinement, selon une étude
         récente de l’Agence de l’environnement et de la maîtrise de l’énergie
@@ -83,158 +61,71 @@
         commun ou du vélo”, avertit Anne Aguiléra, chercheuse à l’université
         Gustave-Eiffel. Autre conséquence possible: l’utilisation plus fréquente du
         véhicule de la personne qui télétravaille par un membre de sa famille.
-        Quand le télétravail des uns favorise le déplacement des autres…
-    </p>
-</div>
-<div class="violet1"></div>
-<div class="violet2"></div>
-<div class="violet3"></div>
-<div class="carte">
-    <img src="img/article-scientifique/carte.jpg" width="375" height="257">
-</div>
-<div class="lg2">
-    <p>
-        Carte de l'Europe, Google Image
-    </p>
+        Quand le télétravail des uns favorise le déplacement des autres…</p>
+    <div class="violet1"></div>
+    <div class="violet2"></div>
+    <div class="violet3"></div>
+    <div class="carte"><img src="img/article-scientifique/carte.jpg" width="375" height="257"></div>
+    <div class="lg2"><p>Carte de l'Europe, Google Image</p></div>
 </div>
 
-<div class="inter-titre-as1">
-    <p>
-        1 Il existe de fortes disparités en Europe
-    </p>
-</div>
-<div class="artcl3">
-    <p>
-        La France a déjà une pratique significative du télétravail du fait de la
+<div class="parag3">
+    <h2>1 Il existe de fortes disparités en Europe</h2>
+    <p>La France a déjà une pratique significative du télétravail du fait de la
         part importante de cadres (1 actif sur 5), et de leur bon équipement
-        informatique.
-    </p>
-</div>
-<div class="inter-titre-as2">
-    <p>
-        2 Le télétravail pourrait contribuer à réduire le trafic routier…
-    </p>
-</div>
-<div class="artcl4">
-    <p>
-        Les trajets entre le domicile et le lieu de travail représentent 30 % du
+        informatique.</p>
+    <h3>2 Le télétravail pourrait contribuer à réduire le trafic routier…</h3>
+    <p1>Les trajets entre le domicile et le lieu de travail représentent 30 % du
         trafic routier et sont déjà très majoritairement effectués par des
         personnes seules dans leur véhicule. La pratique du travail à distance
         pourrait donc permettre de diminuer significativement la circulation
-        routière. […]
-    </p>
-</div>
-<div class="bouchon">
-    <img src="img/article-scientifique/bouchon.jpg" width="375" height="273">
-</div>
-<div class="lg3">
-    <p>
-        Trajet entre le domicile et le travail, Google Image
-    </p>
+        routière. […]</p1>
+
+    <div class="bouchon"><img src="img/article-scientifique/bouchon.jpg" width="375" height="273"></div>
+    <div class="lg3">Trajet entre le domicile et le travail, Google Image</div>
 </div>
 
-<div class="inter-titre-as3">
-    <p>
-        3 … Avec des impacts environnementaux positifs
-    </p>
-</div>
-<div class="artcl5">
-    <p>
-        Les trajets domicile-travail et les déplacements professionnels émettent
-        chaque année 12 millions de tonnes de CO2.
-    </p>
-</div>
-<div class="artcl6">
-    <p>
-        Télétravailler 3 jours par semaine permettrait… <br>- 30 % d’impacts environnementaux des déplacements <br>- 58 % d’émissions de particules fines
+<div class="parag4">
+    <h2>3 … Avec des impacts environnementaux positifs</h2>
+    <p>Les trajets domicile-travail et les déplacements professionnels émettent
+        chaque année 12 millions de tonnes de CO2.</p>
+    <div class="artcl6">
+        <p>Télétravailler 3 jours par semaine permettrait… <br>- 30 % d’impacts environnementaux des déplacements <br>- 58 % d’émissions de particules fines
         <br>Si 50% des français télétravaillaient, il y aurait… <br>- 0,5 % d’émissions nationales de gaz à effet de serre
-        <br>3 600 vols Paris-New York économisés
-    </p>
-</div>
-<div class="billet">
-    <img src="img/article-scientifique/billet.png" width="375" height="812">
-</div>
-<div class="lg4">
-    <p>
-        Billets achetés pour chaque vols d’avions, Google Image
-    </p>
+        <br>3 600 vols Paris-New York économisés</p></div>
+    <div class="billet"><img src="img/article-scientifique/billet.png" width="375" height="812"></div>
+    <div class="lg4">Billets achetés pour chaque vols d’avions, Google Image</div>
 </div>
 
-<div class="inter-titre-as4">
-    <p>
-        4 Mais la pollution numérique risquerait alors d'augmenter
-    </p>
-</div>
-<div class="artcl7">
-    <p>
-        En téléconférence, le recours à la vidéo multiplie par 2 la consommation
+<div class="parag5">
+    <h2>4 Mais la pollution numérique risquerait alors d'augmenter</h2>
+    <p>En téléconférence, le recours à la vidéo multiplie par 2 la consommation
         d’énergie. Et le télétravailleur peut avoir besoin d’un ordinateur à
         domicile : les équipements comptent pour 47 % des émissions liées au
-        numérique.
-    </p>
-</div>
-<div class="inter-titre-as5">
-    <p>
-        5 Et cette pratique reste impossible pour de nombreuses professions
-    </p>
-</div>
-<div class="artcl8">
-    <p>
-        Selon une récente étude de l’Ademe, le télétravail pourrait concerner tout
-        au plus 35 % des actifs.
-    </p>
+        numérique.</p>
+    <div class="inter-titre-as5">
+        <h2>5 Et cette pratique reste impossible pour de nombreuses professions</h2>
+        <p>Selon une récente étude de l’Ademe, le télétravail pourrait concerner tout
+        au plus 35 % des actifs.</p>
+    </div>
+    <div class="nom-auteur"><h2>Thomas Allard</h2></div>
+
+    <div class="ademe"><img src="img/article-scientifique/ademe.jpg" width="257" height="257"></div>
+    <div class="lg5">Ademe: agence de l’environnement et de la maitrise de l’énergie</div>
+    <div class="lg5-2">Google Image</div>
+    <div class="lien-art"><a href="https://articles.cafeyn.co/cf81e6/science-et-vie/2020-09-23/les-cles-pour-comprendre-limpact-du-teletravailHaut%20du%20formulaire"><p>Les clés pour comprendre l'impact du télétravail</p></a></div>
 </div>
 
-<div class="nom-auteur">
-    <p>
-        Thomas Allard
-    </p>
-</div>
-
-<div class="ademe">
-    <img src="img/article-scientifique/ademe.jpg" width="257" height="257">
-</div>
-<div class="lg5">
-    <p>
-        Ademe: agence de l’environnement et de la maitrise de l’énergie
-    </p>
-</div>
-<div class="lg5-2">
-    <p>
-        Google Image
-    </p>
-</div>
-
-<div class="lien-art">
-    <a href="https://articles.cafeyn.co/cf81e6/science-et-vie/2020-09-23/les-cles-pour-comprendre-limpact-du-teletravailHaut%20du%20formulaire"><p>Les clés pour comprendre l'impact du télétravail</p></a>
-</div>
-
-
-
-
-<div class="bouton">
-    <a href="autres-projets.html"><img src="img/article-scientifique/bouton3.png" height="72" width="296"></a>
-</div>
-<div class="tex-clic-as1">
-    <a href="autres-projets.html"><p>
-        Autres projets
-    </p></a>
+<div class="boubou"><a href="autres-projets.html"></a>
+    <div class="tex-clic-as1"><a href="autres-projets.html"><p>Autres projets</p></a></div>
 </div>
 
 <footer>
     <div class="fond_footer"></div>
-    <div class="nom_prenom">
-        <p>Nina BELLINO A1</p>
-    </div>
-    <div class="mailto">
-        <a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a>
-    </div>
-    <div class="projet">
-        <p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p>
-    </div>
-    <div class="mmi_montbe">
-        <a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a>
-    </div
+    <div class="nom_prenom"><p>Nina BELLINO A1</p></div>
+    <div class="mailto"><a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a></div>
+    <div class="projet"><p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p></div>
+    <div class="mmi_montbe"><a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a></div
 </footer>
 </body>
 </html>
